--- a/style.css
+++ b/style.css
@@ -22,23 +22,20 @@ body {
 .logo {
     margin-left: 98px;
     margin-top: 67px;
+    margin-bottom: 262px;
     float: left;
 }
 
 .nav_bar {
     list-style-type: none;
-    display: inline-block;
     margin-right: 9px;
-    margin-top: 67px;
+    margin-top: 53px;
     float: right;
-    padding: 0px;
 }
-
 
 .nav_bar li {
     float: left;
-    background-color: red;
-    display: inline;
+
 }
 
 .nav_bar li a {
@@ -49,9 +46,9 @@ body {
     line-height: 48px;
     text-align: right;
     text-decoration: none;
-    padding-bottom: 3px;
-    padding-left: 14px;
-    padding-right: 14px;
+    border-bottom: 3px solid transparent;
+    padding: 0px 14px 2px;
+
 }
 
 .nav_bar li a:hover {
@@ -74,6 +71,8 @@ body {
     clear: both;
 }
 
+.slider_content {
+}
 
 .slider_content h3 {
     color: #43a047;
@@ -81,15 +80,23 @@ body {
     font-weight: 700;
     line-height: 48px;
     text-align: left;
+    display: inline;
+    clear: both;
 }
 
 .slider_content h1 {
     color: #212121;
-    font-size: 62px;
+    font-size: 58px;
     font-weight: 100;
     line-height: 72px;
     text-align: left;
     text-transform: uppercase;
+    padding: 0px;
+    margin-top: -10px;
+    margin-bottom: 0px;
+    clear: both;
+    
+
 }
 
 .slider_content p {
@@ -98,8 +105,15 @@ body {
     font-weight: 300;
     line-height: 24px;
     text-align: left;
+    margin-bottom: 36px;
 }
 
+.slider input {
+    background: #ffffff;
+    box-shadow: 0px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
+    width: 212px;
+    height: 45px;
+}
 
 .slider input[type="button"] {
     display: block;
@@ -108,13 +122,10 @@ body {
     font-weight: 700;
     line-height: 45px;
     text-align: center;
-    background: #ffffff;
-    box-shadow: 0px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
-    width: 212px;
-    height: 45px;
     border-radius: 22px;
     cursor: pointer;
     text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
 
@@ -124,7 +135,8 @@ body {
 
 
 .nav_buttons {
-    margin: 120px;
+    text-align: center;
+    margin-top: 140px;
 }
 
 .nav_button {
@@ -133,6 +145,7 @@ body {
     width: 30px;
     height: 30px;
     display: inline-block;
+    margin: 6px;
 }
 
 
@@ -140,4 +153,5 @@ body {
     background-color: black;
     width: 40px;
     height: 40px;
+    margin: 1px;
 }
