--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@
 
 html,
 body {
-    height: 100%;
-    width: 100%;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat';
+    background-color: #ffffff;
 }
 
 .container {
@@ -71,9 +70,6 @@ body {
     clear: both;
 }
 
-.slider_content {
-}
-
 .slider_content h3 {
     color: #43a047;
     font-size: 18px;
@@ -95,8 +91,6 @@ body {
     margin-top: -10px;
     margin-bottom: 0px;
     clear: both;
-    
-
 }
 
 .slider_content p {
@@ -108,14 +102,14 @@ body {
     margin-bottom: 36px;
 }
 
-.slider input {
+.order {
     background: #ffffff;
     box-shadow: 0px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
     width: 212px;
     height: 45px;
 }
 
-.slider input[type="button"] {
+input[class="order"] {
     display: block;
     color: #212121;
     font-size: 18px;
@@ -129,7 +123,7 @@ body {
 }
 
 
-.slider input[type="button"]:hover {
+input[class="order"]:hover {
     background: #ffffff url(img/arrow.png) no-repeat 173px 16px;
 }
 
@@ -137,6 +131,7 @@ body {
 .nav_buttons {
     text-align: center;
     margin-top: 130px;
+    margin-left: -98px;
 }
 
 .nav_button {
@@ -154,4 +149,113 @@ body {
     width: 40px;
     height: 40px;
     margin: 1px;
+}
+
+.item_list1 {
+    width: 1366px;
+    margin-top: 110px;
+}
+
+.item_list1 > h2 {
+    float: left;
+    margin-left: 97px;
+    display: inline;
+
+}
+
+.item_list1 > h2 a {
+    color: #6c6c6c;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: left;
+    text-decoration: none;
+    border-bottom: 3px solid transparent;
+    margin-right: -105px;
+    padding: 15px;
+}
+
+.item_list1 > h2 a:hover {
+    color: #212121;
+    border-bottom: 3px solid #212121;
+}
+
+.item_list1 > a {
+    float: right;
+    text-decoration: none;
+    color: #212121;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+    margin-top: 32px;
+    margin-right: 102px;
+    padding-right: 21px;
+    display: block;
+}
+
+.item_list1 > a:hover {
+    background: #ffffff url(img/arrow.png) no-repeat 140px;
+}
+
+.items_small {
+    clear: both;
+    margin-left: 98px;
+}
+
+.items_small .item {
+    background-color: #ffffff;
+    color: transparent;
+    border: 1px solid transparent;
+    opacity: 0.9;
+    width: 268px;
+    height: 268px;
+    float: left;
+    margin-left: 30px;
+    margin-top: 51px;
+    display: flex;
+    flex-direction: column;
+    background: url(img/product-2.jpg);
+    display: relative;
+}
+
+.items_small .item:first-child {
+    margin-left: 0px;
+}
+
+
+.items_small .item:hover {
+    border: 1px solid #9c9c9c;
+    width: 268px;
+    height: 268px;
+    opacity: 0.05;
+}
+
+.items_small .item a {
+    border-radius: 50%;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
+    width: 48px;
+    height: 48px;
+    text-align: center;
+    text-decoration: none;
+    color: #212121;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 28px
+}
+
+.items_small .item img {
+    margin: 16px;
+    width: 12px;
+    height: 20px;
+}
+
+.items_big {
+    clear: both;
+    margin-left: 98px;
+
+}
+
+.items_big .item {
+    margin-top: 121px;
+    float: left;
 }
