Доработана верстка второго листа лендинга(осталось разобраться с прозрачностью фонового изображения при наведении. Добавлены недостающие картинки

--- a/style.css
+++ b/style.css
@@ -203,7 +203,6 @@ input[class="order"]:hover {
 
 .items_small .item {
     background-color: #ffffff;
-    color: transparent;
     border: 1px solid transparent;
     opacity: 0.9;
     width: 268px;
@@ -213,23 +212,35 @@ input[class="order"]:hover {
     margin-top: 51px;
     display: flex;
     flex-direction: column;
-    background: url(img/product-2.jpg);
-    display: relative;
+    color: transparent;
 }
 
 .items_small .item:first-child {
     margin-left: 0px;
+    background: url(img/product-4.jpg);
 }
 
+.items_small .item:nth-child(2) {
+    background: url(img/product-2.jpg);
+}
+
+.items_small .item:nth-child(3) {
+    background: url(img/product-3.jpg);
+}
+
+.items_small .item:nth-child(4) {
+    background: url(img/product-4.jpg);
+}
 
 .items_small .item:hover {
     border: 1px solid #9c9c9c;
     width: 268px;
     height: 268px;
-    opacity: 0.05;
+    background-image: none;
 }
 
 .items_small .item a {
+    display: block;
     border-radius: 50%;
     background-color: #ffffff;
     box-shadow: 0px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
@@ -243,19 +254,89 @@ input[class="order"]:hover {
     line-height: 28px
 }
 
+.items_small .item .arrow1 {
+    margin-left: 111px;
+    margin-top: 62px;
+}
+
 .items_small .item img {
     margin: 16px;
     width: 12px;
     height: 20px;
 }
 
+.items_small .item h3 {
+    color:  #212121;
+    font-size: 21.91px;
+    font-weight: 700;
+    line-height: 30px;
+    text-align: center;
+    transform: scaleX(1.0041);
+}
+
+
+.items_small .item p {
+    display: inline;
+    color:  #6c6c6c;
+    font-size: 13.94px;
+    font-weight: 300;
+    line-height: 22px;
+    text-align: center;
+    transform: scaleX(1.0041);
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: -14px;
+}
+
 .items_big {
     clear: both;
     margin-left: 98px;
-
+    width: 1366px;
 }
 
 .items_big .item {
     margin-top: 121px;
     float: left;
+    width: 632px;
+    height: 455px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 51px;
+    padding-top: 228px;
+}
+
+.items_big .item:first-child {
+    background-image: url(img/promo-img1.jpg);
+}
+
+.items_big .item:nth-child(2) {
+    background-image: url(img/promo-img.jpg);
+}
+
+.items_big .item h3 {
+    color:  #1e88e5;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: left;
+    margin-top: -20px;
+}
+
+.items_big .item h2 {
+    color:  #212121;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: left;
+    margin-top: -28px;
+}
+
+.items_big .item p {
+    color:  #6c6c6c;
+    font-size: 13.99px;
+    font-weight: 300;
+    line-height: 24px;
+    text-align: left;
+    transform: scaleY(1.0022);
+    margin-top: -14px;
+    margin-bottom: 34px;
 }
